Closed Bug 72396 Opened 23 years ago Closed 23 years ago

assertion in BasicTableLayoutStrategy::Initialize due to nsTableFrame::CalcBorderBoxWidth

Categories

(Core :: Layout: Tables, defect)

x86
Windows NT
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla0.9

People

(Reporter: karnaze, Assigned: karnaze)

References

()

Details

Attachments

(1 file)

nsTableFrame::BorderBoxWidth needs to be changed to not return an unconstrained 
value when the avail space is constrained.
Moving to m0.9.
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9
Keywords: patch
QA contact update
QA Contact: chrisd → amar
sr=attinasi
The patch is in. It allows table balancing to be skipped when the width is 
unconstrained.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
 The given URI looks fine marking verified
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: