bug 72396 - fix CalcBorderBoxWidth to not use unconstrained width. Fix column balancing to be skipped when there is an unconstrained width. sr=attinasi